distinct.test, distinct.result:   Added test cases for bug #12625. sql_select.cc:   Fixed bug #12625.   Fixed invalid removal of constant items from the DISTINCT   list in the function create_distinct_group.

sql/sql_select.cc:
  Fixed bug #12625.
mysql-test/r/distinct.result:
  Added test cases for bug #12625.
mysql-test/t/distinct.test:
  Added test cases for bug #12625.